--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.23"
 psycopg2-binary = "^2.9.9"
 pydantic = "^2.5.2"
 alembic = "^1.12.1"
+pydantic-settings = "^2.1.0"
 
 
 [build-system]
